fix: Code-Review-Befunde behoben (DiffDialog, findPreviousScript, Header)
- DiffDialog: ueberflüssige ScrollPanes entfernt, Scroll-Sync mit Flag
  gegen Rekursion, Escape-Taste + Schliessen-Button
- findPreviousScript: Praefix-Filter damit nur Scripts mit gleichem
  Alias verglichen werden
- ScriptWriter: lesbare Timestamp-Formatierung im Header
- Files.readString statt readAllBytes fuer Konsistenz

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>